# jrdb

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
docs/: doctypes.md  entities.md  filetypes.md  glossary.md
jrdb/: admin.py  apps.py  celery.py  codes.py  helpers.py  loaders.py  settings.py  store.py  tasks.py  urls.py  wsgi.py
jrdb/datadocs/: CZA.py  KYI.py  KZA.py  MZA.py  SED.py  SKB.py  SRB.py  UKC.py  __init__.py  codes.py  doctype.py  template.py
jrdb/docspecs/: UKC.py  util.py
jrdb/fixtures/: grade.json  grade_code.json  hair_color.json  hair_color_code.json  hoof.json  hoof_code.json  horse_body.json  horse_body_code.json  horse_condition.json  horse_condition_code.json  horse_demeanor_code.json  horse_gear.json  horse_gear_category.json  horse_gear_code.json  horse_gear_code_category.json  horse_physique_code.json  horse_symbol.json  impost.json  impost_class_code.json  impost_code.json  improvement_code.json  pace_flow_code.json  paddock_observed_hoof.json  paddock_observed_hoof_code.json  pedigree.json  penalty_code.json  race_category_code.json  race_class.json  race_condition_code.json  race_condition_group_code.json  race_horse_sex_symbol.json  race_horse_type_symbol.json  race_interleague_symbol.json  race_line_code.json  racetrack.json  racetrack_code.json  racing_line.json  racing_line_code.json  rest_reason.json  rest_reason_code.json  (+10 more)
jrdb/migrations/: 0001_initial.py  0002_auto_20190326_0029.py  (+10 more)
settings/: base.py  celery.py
(+83 files in other folders)
