[tool.poetry]
name = "jrdb"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
numpy = "^1.16"
pandas = "^0.24.2"
sqlalchemy = "^1.3"
psycopg2 = "^2.8"
celery = "^4.3"
redis = "^3.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
